# GenericAgent

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  README_EN.md  docker-compose.yml  docker-entrypoint.sh  docker-install.sh  install.sh  llmcore.py  penglai  penglai_abilities.py  penglai_channels.py  penglai_i18n.py  penglai_im_launch.py  penglai_migrate.py  penglai_providers.yaml  penglai_setup.py  penglai_skills.py  penglai_tui.py
.github/: README.md  README_EN.md
.github/ISSUE_TEMPLATE/: 01-install.yml  02-channel.yml  03-security.yml  config.yml
.github/workflows/: docker-image.yml
frontends/: continue_cmd.py  tuiapp_v2.py  wechatapp.py
installer/: README.md  penglai_bootstrap.py  pyproject.toml
memory/: penglai_channels_sop.md  penglai_checkpoint_sop.md  penglai_compress_sop.md  penglai_genmedia_sop.md  penglai_memsig_sop.md  penglai_weather_sop.md  project_mode_sop.md  vision_api.template.py
plugins/: penglai_critic.py  penglai_fileguard.py  penglai_mcp.py  penglai_memguard.py  penglai_redline.py  penglai_search.py  penglai_summarize.py  penglai_voice.py  project_mode.py
reflect/: penglai_companion.py
skills/: README.md
tests/: _harness.py  test_companion_v2.py  test_fileguard.py  test_im_voice.py  test_memguard.py  test_penglai_mcp.py  test_penglai_migrate.py  test_penglai_skills.py  test_redline.py  test_search_fallback.py  test_summarize.py  test_wizard_allowlist.py  test_wizard_i18n.py
